chore: upgrade to Java 21
Closes: MODQM-458